test/libsolidity/syntaxTests/storageLayoutSpecifier/type_uint_max.sol
contract at layout at type(uint).max { }
// ----
// TypeError 1505: (22-36): The base slot expression cannot be evaluated during compilation.
